tests/expected_invalid_public_return_private_type.diag.out
<input>:6:21: error: public API cannot reference private type 'Hidden'
    public fn leak() -> Hidden { Hidden { value: 1 } }
                        ^^^^^^
